--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.9.0",
+    "@radix-ui/react-tooltip": "^1.0.5",
     "@svgr/webpack": "^6.5.1",
     "@tanstack/react-query": "^4.20.2",
     "@trpc/client": "^10.9.0",
