--- a/package.json
+++ b/package.json
@@ -1,55 +1,56 @@
 {
-  "name": "spotify-clone",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "build": "next build",
-    "dev": "next dev",
-    "postinstall": "prisma generate",
-    "lint": "next lint",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^4.9.0",
-    "@radix-ui/react-tooltip": "^1.0.5",
-    "@svgr/webpack": "^6.5.1",
-    "@tanstack/react-query": "^4.20.2",
-    "@trpc/client": "^10.9.0",
-    "@trpc/next": "^10.9.0",
-    "@trpc/react-query": "^10.9.0",
-    "@trpc/server": "^10.9.0",
-    "@types/react-resizable": "^3.0.3",
-    "clsx": "^1.2.1",
-    "next": "^13.2.1",
-    "next-auth": "^4.19.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-resizable": "^3.0.4",
-    "superjson": "1.9.1",
-    "tailwind-merge": "^1.10.0",
-    "zod": "^3.20.6"
-  },
-  "devDependencies": {
-    "@savvywombat/tailwindcss-grid-areas": "^3.0.1",
-    "@types/eslint": "^8.21.1",
-    "@types/node": "^18.14.0",
-    "@types/prettier": "^2.7.2",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.53.0",
-    "@typescript-eslint/parser": "^5.53.0",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^8.34.0",
-    "eslint-config-next": "^13.2.1",
-    "postcss": "^8.4.14",
-    "prettier": "^2.8.1",
-    "prettier-plugin-tailwindcss": "^0.2.1",
-    "prisma": "^4.9.0",
-    "tailwindcss": "^3.2.0",
-    "typescript": "^4.9.5"
-  },
-  "ct3aMetadata": {
-    "initVersion": "7.7.0"
-  }
+    "name": "spotify-clone",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "build": "next build",
+        "dev": "next dev",
+        "postinstall": "prisma generate",
+        "lint": "next lint",
+        "start": "next start"
+    },
+    "dependencies": {
+        "@next-auth/prisma-adapter": "^1.0.5",
+        "@prisma/client": "^4.9.0",
+        "@radix-ui/react-progress": "^1.0.2",
+        "@radix-ui/react-tooltip": "^1.0.5",
+        "@svgr/webpack": "^6.5.1",
+        "@tanstack/react-query": "^4.20.2",
+        "@trpc/client": "^10.9.0",
+        "@trpc/next": "^10.9.0",
+        "@trpc/react-query": "^10.9.0",
+        "@trpc/server": "^10.9.0",
+        "@types/react-resizable": "^3.0.3",
+        "clsx": "^1.2.1",
+        "next": "^13.2.1",
+        "next-auth": "^4.19.0",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-resizable": "^3.0.4",
+        "superjson": "1.9.1",
+        "tailwind-merge": "^1.10.0",
+        "zod": "^3.20.6"
+    },
+    "devDependencies": {
+        "@savvywombat/tailwindcss-grid-areas": "^3.0.1",
+        "@types/eslint": "^8.21.1",
+        "@types/node": "^18.14.0",
+        "@types/prettier": "^2.7.2",
+        "@types/react": "^18.0.28",
+        "@types/react-dom": "^18.0.11",
+        "@typescript-eslint/eslint-plugin": "^5.53.0",
+        "@typescript-eslint/parser": "^5.53.0",
+        "autoprefixer": "^10.4.7",
+        "eslint": "^8.34.0",
+        "eslint-config-next": "^13.2.1",
+        "postcss": "^8.4.14",
+        "prettier": "^2.8.1",
+        "prettier-plugin-tailwindcss": "^0.2.1",
+        "prisma": "^4.9.0",
+        "tailwindcss": "^3.2.0",
+        "typescript": "^4.9.5"
+    },
+    "ct3aMetadata": {
+        "initVersion": "7.7.0"
+    }
 }
