--- a/package.json
+++ b/package.json
@@ -2,12 +2,19 @@
     "name": "spotify-clone",
     "version": "0.1.0",
     "private": true,
+    "engines": {
+        "pnpm": ">=6.0.0",
+        "yarn": "please-use-pnpm",
+        "node": ">=16.13.0",
+        "npm": "please-use-pnpm"
+    },
     "scripts": {
         "build": "next build",
         "dev": "next dev",
         "postinstall": "prisma generate",
         "lint": "next lint",
-        "start": "next start"
+        "start": "next start",
+        "preinstall": "npx only-allow pnpm"
     },
     "dependencies": {
         "@next-auth/prisma-adapter": "^1.0.5",
@@ -24,6 +31,7 @@
         "clsx": "^1.2.1",
         "next": "^13.2.1",
         "next-auth": "^4.19.0",
+        "only-allow": "^1.1.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-resizable": "^3.0.4",
