--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@next-auth/prisma-adapter": "^1.0.5",
         "@prisma/client": "^4.9.0",
         "@radix-ui/react-progress": "^1.0.2",
+        "@radix-ui/react-slider": "^1.1.1",
         "@radix-ui/react-tooltip": "^1.0.5",
         "@svgr/webpack": "^6.5.1",
         "@tanstack/react-query": "^4.20.2",
