--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     },
     "devDependencies": {
         "@savvywombat/tailwindcss-grid-areas": "^3.0.1",
+        "@total-typescript/ts-reset": "^0.4.2",
         "@types/eslint": "^8.21.1",
         "@types/node": "^18.14.0",
         "@types/prettier": "^2.7.2",
