--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
         "react-resizable": "^3.0.4",
         "superjson": "1.9.1",
         "tailwind-merge": "^1.10.0",
-        "zod": "^3.20.6"
+        "zod": "^3.20.6",
+        "zustand": "^4.3.6"
     },
     "devDependencies": {
         "@savvywombat/tailwindcss-grid-areas": "^3.0.1",
@@ -57,8 +58,9 @@
         "prettier": "^2.8.1",
         "prettier-plugin-tailwindcss": "^0.2.1",
         "prisma": "^4.9.0",
-        "tailwindcss": "^3.2.0",
-        "typescript": "^4.9.5"
+        "tailwindcss": "^3.3.0",
+        "typescript": "^4.9.5",
+        "usehooks-ts": "^2.9.1"
     },
     "ct3aMetadata": {
         "initVersion": "7.7.0"
