--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "@next-auth/prisma-adapter": "^1.0.5",
         "@prisma/client": "^4.9.0",
+        "@radix-ui/react-dropdown-menu": "^2.0.4",
         "@radix-ui/react-progress": "^1.0.2",
         "@radix-ui/react-slider": "^1.1.1",
         "@radix-ui/react-tooltip": "^1.0.5",
