--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@radix-ui/react-slider": "^1.1.1",
         "@radix-ui/react-tooltip": "^1.0.5",
         "@svgr/webpack": "^6.5.1",
+        "@tailwindcss/container-queries": "^0.1.1",
         "@tanstack/react-query": "^4.20.2",
         "@trpc/client": "^10.9.0",
         "@trpc/next": "^10.9.0",
