--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@svgr/webpack": "^6.5.1",
         "@tailwindcss/container-queries": "^0.1.1",
         "@tanstack/react-query": "^4.20.2",
+        "@tanstack/react-query-devtools": "^4.32.6",
         "@trpc/client": "^10.9.0",
         "@trpc/next": "^10.9.0",
         "@trpc/react-query": "^10.9.0",
