--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@prisma/client": "^4.9.0",
         "@radix-ui/react-dropdown-menu": "^2.0.4",
         "@radix-ui/react-progress": "^1.0.2",
+        "@radix-ui/react-select": "^1.2.2",
         "@radix-ui/react-slider": "^1.1.1",
         "@radix-ui/react-tooltip": "^1.0.5",
         "@svgr/webpack": "^6.5.1",
